--- a/pages/non-veg.html
+++ b/pages/non-veg.html
@@ -100,6 +100,25 @@
         }
     
 </script>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>About Us</h3>
+                <p>We are a team of food enthusiasts who love to share our favorite recipes with others. Our mission
+                    is to inspire people to cook delicious and healthy meals at home.</p>
+            </div>
+            <div class="col-md-6">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></li>
+                    <li>123 Main Street</li>
+                    <li>City, State Zip</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  </footer>
 </body>
 
 </html>
