--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -4,7 +4,7 @@
 <a href=""></a>
 <body>
     <div class="contact-form">
-      <span class="heading">Add New Recipe</span>
+      <span class="heading">Edit Recipe</span>
       <form id="addrecipe">
         <label for="image">Image Url</label>
         <input type="url" required="" id="imgurl">
@@ -69,7 +69,7 @@
         const ingredient3 = document.getElementById("Ingredient3").value
         const ingredient4 = document.getElementById("Ingredient4").value
         const ingredient5 = document.getElementById("Ingredient5").value
-        const ingredient6 = document.getElementById("Ingredient6").value
+       const ingredient6 = document.getElementById("Ingredient6").value
         const ingredient7 = document.getElementById("Ingredient7").value
         const ingredient8 = document.getElementById("Ingredient8").value
 
