--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../assets/style/home.css">
     <title>cooking website</title>
     <meta name="view port" content="width=device-width, initial-scale=1.0">
-</head>
-
+</head> 
 <body>
     <header class="head">
         <div>
@@ -107,5 +107,4 @@
         </div>
     </footer>
 </body>
-
 </html>
