--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -4,7 +4,7 @@
 <a href=""></a>
 <body>
     <div class="contact-form">
-      <span class="heading">Edit Recipe</span>
+      <span class="heading">Add new Recipe</span>
       <form id="addrecipe">
         <label for="image">Image Url</label>
         <input type="url" required="" id="imgurl">
