--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../assets/style/home.css">
+    <link rel="stylesheet" href="../assets/style/search.css">
     <title>cooking website</title>
     <meta name="view port" content="width=device-width, initial-scale=1.0">
 </head> 
@@ -47,6 +48,74 @@
     <!-- <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head"> -->
     <div class="all-recipe">
     </div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Find Meal For Your Ingredients</title>
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" /> -->
+      <link rel = "stylesheet" href = "../assets/style/search.css">
+    </head>
+    <body>
+      <div class = "container">
+        <div class = "meal-wrapper">
+          <div class = "meal-search">
+            <h2 class = "title">Find Meals For Your Ingredients</h2>
+            <!-- <blockquote>Real food doesn't have ingredients, real food is ingredients.<br>
+              <cite>- Jamie Oliver</cite> -->
+            </blockquote>
+            <div class = "meal-search-box">
+              <input type = "text" class = "search-control" placeholder="Enter an ingredient" id = "search-input">
+              <button type = "submit" class = "search-btn btn" id = "search-btn">
+                <i class = "fas fa-search"></i>
+              </button>
+            </div>
+          </div>
+          <div class = "meal-result">
+            <h2 class = "title">Your Search Results:</h2>
+            <div id= "meal">
+              <!-- meal item -->
+              <!-- <div class = "meal-item">
+                <div class = "meal-img">
+                  <img src = "food.jpg" alt = "food">
+                </div>
+                <div class = "meal-name">
+                  <h3>Potato Chips</h3>
+                  <a href = "#" class = "recipe-btn">View recipe</a>
+                </div>
+              </div> -->
+              <!-- end of meal item -->
+            </div>
+          </div>
+          <div class = "meal-details">
+            <!-- recipe close btn -->
+            <button type = "button" class = "btn recipe-close-btn" id = "recipe-close-btn">
+              <i class = "fas fa-times"></i>
+            </button>
+            <!-- meal content -->
+            <div class = "meal-details-content">
+              <!-- <h2 class = "recipe-title">Meals Name Here</h2>
+              <p class = "recipe-category">Category Name</p>
+              <div class = "recipe-instruct">
+                <h3>Instructions:</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo blanditiis quis accusantium natus! Porro, reiciendis maiores molestiae distinctio veniam ratione ex provident ipsa, soluta suscipit quam eos velit autem iste!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam voluptatibus ad obcaecati magnam, esse numquam nisi ut adipisci in?</p>
+              </div>
+              <div class = "recipe-meal-img">
+                <img src = "food.jpg" alt = "">
+              </div>
+              <div class = "recipe-link">
+                <a href = "#" target = "_blank">Watch Video</a>
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src = "../script/search.js"></script>
+    </body>
+    </html>
+
     <script>
         const recipe = [];
         let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
@@ -73,6 +142,11 @@
             let detail_btn = document.createElement("a");
             detail_btn.classList.add("detailBtn");
 
+let edit = document.createElement("a");
+edit.setAttribute("href","./editrecipe.html?id="+get_id)
+edit_btn.innerText="Edit";
+
+
             recipe_img.src = recipe[i].image_url;
             recipe_title.textContent = recipe[i].h2_cardtitle;
             recipe_description.textContent = recipe[i].message;
@@ -87,24 +161,6 @@
             document.querySelector(".all-recipe").append(div_recipe);
         }
     </script>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>About Us</h3>
-                    <p>We are a team of food enthusiasts who love to share our favorite recipes with others. Our mission
-                        is to inspire people to cook delicious and healthy meals at home.</p>
-                </div>
-                <div class="col-md-6">
-                    <h3>Contact Us</h3>
-                    <ul>
-                        <li><a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></li>
-                        <li>123 Main Street</li>
-                        <li>City, State Zip</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+    
 </body>
 </html>
