--- a/pages/non-veg.html
+++ b/pages/non-veg.html
@@ -88,7 +88,7 @@
             recipe_title.textContent = recipe[i].h2_cardtitle;
             recipe_description.textContent = recipe[i].message;
             detail_btn.href = "details.html?id=" + recipe[i].recipe_id;
-            detail_btn.innerText = "Details"
+            detail_btn.innerText = "Get Details"
 
             div_recipe.appendChild(recipe_img);
             recipe_about.appendChild(recipe_title);
@@ -100,7 +100,7 @@
         }
     
 </script>
-<footer>
+<!-- <footer>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
