--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href=""></a>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,7 +72,7 @@ let current_email = JSON.parse(localStorage.getItem("data"));
               user_details.splice(Index, 1);
                 console.log(user_details);
                 localStorage.setItem("register", JSON.stringify(user_details))
-                window.location.href = "./index.html";
+                window.location.href = "../index.html";
 
           }
 
