--- a/pages/details.html
+++ b/pages/details.html
@@ -284,7 +284,7 @@
       edit_btn.setAttribute("href", "./editrecipe.html?id="+get_id)
       edit_btn.setAttribute("id", "edit")
 
-      document.querySelector(".container").appendChild(edit_btn)
+      document.querySelector(".whole-content").appendChild(edit_btn)
     </script>
 
     <!-- <script>
