chore: add title in html

--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -1,11 +1,16 @@
-<html>
-
-<link rel="stylesheet" href="../assets/style/addrecipe.css">
-<a href=""></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User add newRecipe Form</title>
+  <link rel="stylesheet" href="../assets/style/addrecipe.css">
+</head>
 <body>
     <div class="contact-form">
       <span class="heading">Add new Recipe</span>
-      <form id="addrecipe">
+    <form id="addrecipe">
         <label for="image">Image Url</label>
         <input type="url" required="" id="imgurl">
         <label for="head">recipe Name</label>
