--- a/pages/details.html
+++ b/pages/details.html
@@ -87,31 +87,7 @@
     </div> -->
     <div class="cmt"></div>
 
-    <!-- <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h3>About Us</h3>
-            <p>
-              We are a team of food enthusiasts who love to share our favorite
-              recipes with others. Our mission is to inspire people to cook
-              delicious and healthy meals at home.
-            </p>
-          </div>
-          <div class="col-md-6">
-            <h3>Contact Us</h3>
-            <ul>
-              <li>
-                <a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a>
-              </li>
-              <li>123 Main Street</li>
-              <li>City, State Zip</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>  -->
-    <script>
+      <script>
       const recipeInfo = JSON.parse(localStorage.getItem("newRecipe"));
       console.log(recipeInfo);
 
@@ -136,21 +112,21 @@
       const url = document
         .getElementById("food-img")
         .setAttribute("src", recipeObj.image_url);
-      const ingredient = (document.getElementById("ingredient").innerHTML =
+      const ingredient = (document.getElementById("ingredient1").innerHTML =
         recipeObj["ingredients"]);
-        const ingredient1 = (document.getElementById("ingredient1").innerHTML =
-        recipeObj["ingredient2 "]);
-        const ingredients3 = (document.getElementById("ingredient1").innerHTML =
-        recipeObj["ingredient3 "]);
-        const ingredients4 = (document.getElementById("ingredient1").innerHTML =
+        const ingredient1 = (document.getElementById("ingredient2").innerHTML =
+        recipeObj["ingredient2"]);
+        const ingredients3 = (document.getElementById("ingredient3").innerHTML =
+        recipeObj["ingredient3"]);
+        const ingredients4 = (document.getElementById("ingredient4").innerHTML =
         recipeObj["ingredient4"]);
-        const ingredients5 = (document.getElementById("ingredient1").innerHTML =
+        const ingredients5 = (document.getElementById("ingredient5").innerHTML =
         recipeObj["ingredient5"]);
-        const ingredients6 = (document.getElementById("ingredient1").innerHTML =
+        const ingredients6 = (document.getElementById("ingredient6").innerHTML =
         recipeObj["ingredient6"]);
-        const ingredients7 = (document.getElementById("ingredient1").innerHTML =
+        const ingredients7 = (document.getElementById("ingredient7").innerHTML =
         recipeObj["ingredient7"]);
-        const ingredients8 = (document.getElementById("ingredient1").innerHTML =
+        const ingredients8 = (document.getElementById("ingredient8").innerHTML =
         recipeObj["ingredient8"]);
       const step1 = (document.getElementById("step1").innerHTML =
         recipeObj["Step1"]);
