chore: worked in logout

--- a/pages/details.html
+++ b/pages/details.html
@@ -9,6 +9,7 @@
 </head>
 
   <body>
+    <div class="recipe-details">
     <img
       class="image"
       src="https://media.istockphoto.com/id/1223383996/photo/chef-tossing-flaming-vegetable.jpg?s=612x612&w=0&k=20&c=6K9jPlnfL6Rdf16-08RaK6DRfP03wy8pSZviicDpuVQ="
@@ -56,7 +57,7 @@
         </ol>
       </div>
     </div>
-    
+  </div>
     <form id="com">
       <span class="addcomment">Add a comment</span>
       <textarea class="comment" id="comment"></textarea>
