--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -13,7 +13,7 @@
     <form id="addrecipe">
         <label for="image">Image Url</label>
         <input type="url" required="" id="imgurl">
-        <label for="head">recipe Name</label>
+        <label for="head">Recipe Name</label>
         <input type="text" required="" id="recipename">
         <label for="head">About</label>
         <input type="text"  id="About">
