--- a/pages/veg.html
+++ b/pages/veg.html
@@ -48,7 +48,7 @@
                 <img class="logo" src="../assets/images/yellow logo.png" height="50px" width="50px" alt="logo">
                 <h1>RECIPE</h1>
             </div>
-            <span class="by">By Mullai</span>
+            <!-- <span class="by">By Mullai</span> -->
     </header>
 
 
