--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
     <header class="head">
         <div>
             <a href="./profile.html">
-                <button class="non-veg">
+                <button class="non-veg" onclick="openForm()">
                     profile
                 </button>
             </a>
@@ -19,21 +19,22 @@
                         Login
                     </button> 
                 </a> -->
+                <a href="./non-veg.html">
+                  <button class="non-veg">
+                      NonVeg
+                  </button>
+              </a>
+              <a href="./snacks.html">
+                  <button class="snacks">
+                      Snacks
+                  </button>
+              </a>
             <a href="./veg.html">
                 <button class="Veg-Recipe">
                     Veg Recipe
                 </button>
             </a>
-            <a href="./non-veg.html">
-                <button class="non-veg">
-                    NonVeg
-                </button>
-            </a>
-            <a href="./snacks.html">
-                <button class="snacks">
-                    Snacks
-                </button>
-            </a>
+            
             <!-- <a href="page4.html">
                 <button class="Veg-Recipe">
                     Add New
@@ -41,11 +42,12 @@
             </a> -->
             <div class="header">
                 <img class="logo" src="../assets/images/yellow logo.png" height="50px" width="50px" alt="logo">
-                <h1>RECIPE</h1>
+                <h1>MULLAI RECIPE</h1>
             </div>
             <!-- <span class="by">By Mullai</span> -->
     </header>
-    <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head">
+    <img class="header-image" src="../assets/images/healthy ideas (2).gif" alt="header-gif">
+    <!-- <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head"> -->
     <div class="all-recipe">
     </div>
     <!DOCTYPE html>
