--- a/pages/snacks.html
+++ b/pages/snacks.html
@@ -59,10 +59,11 @@
       for (let i = 0; i < recipe.length; i++) {
         let div_recipe = document.createElement("div");
         div_recipe.classList.add("recipe");
+        
         let recipe_img = document.createElement("img");
         recipe_img.classList.add("recipe-img");
-        recipe_img.setAttribute("height", "300px");
-        recipe_img.setAttribute("width", "500px");
+        // recipe_img.setAttribute("height", "300px");
+        // recipe_img.setAttribute("width", "500px");
 
         let recipe_about = document.createElement("div");
         recipe_about.classList.add("about");
